...
            style={{
              fontSize: typography.sizes.headline,
              fontWeight: typography.weights.bold,
              color: colors.text.primary,
            }}
          >
            Quando tomar
          </Text>
          <Text
            style={{
              fontSize: typography.sizes.label,
              color: colors.text.tertiary,
            }}
...
